# songgeneration-mcp

./: .env.example  .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  README_20260428_202922.md.bak  README_DE.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  pyproject.toml.20260717_120000.bak  start.ps1  start.ps1.bak.20260508_202256
.cursor/rules/: mcp-sota-standards.mdc
.github/workflows/: ci.yml.20260701_030123.bak  ci.yml.20260701_030330.bak
docs/: BACKENDS.md  INSTALL.md  LYRIA_VS_SG2.md  MCPB_STANDARDS.md  MCP_SERVER_STANDARDS.md  PRD.md  README.md
docs/CLIENT_RULEBOOKS/: CLAUDE_DESKTOP.md  CLINE.md  CURSOR_IDE.md  WINDSURF.md
mcpb/: README.md  manifest.json  pyproject.toml
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/: lyria_compare.py  lyria_compare_20260428_202727.py.bak  mcp_server.py  mcp_server.py.bak  mcp_server_20260428_203122.py.bak  mcp_server_20260428_203422.py.bak  plex_export.py  reaper_export.py  repository.py  server.py  settings_store.py  sg2.py  studio_boot.py  transport.py  virtualdj_export.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs  backend.rs.20260617-014834.bak
native/windows/: hooks.nsh
reports/: .assess-fix-timestamp  assess-20260723_070710.md
scripts/: check-repo-standards.ps1  cua-nsis-config.json  install-music-deps.ps1  setup.py  sync-sota.ps1  test.sh
src/songgeneration_mcp/: __init__.py  log_buffer.py  logic.py  mcp_server.py  mcp_server_20260428_203022.py.bak  mp3.py  server.py  server_20260428_202822.py.bak  studio_boot.py  transport.py
tests/: test_integration.py  test_sg2.py
tests/integration/: test_asgi_api.py  test_generate_rest.py  test_server.py  test_settings_export.py  test_song_to_reaper_scaffold.py
tests/unit/: test_tools.py
tools/: _debug_studio_payload.py
web_sota/: README.md  index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202256  vite.config.ts
web_sota/docs/: PAGES.md  README.md
web_sota/src/: App.tsx
web_sota/src/common/: apps-catalog.ts
web_sota/src/components/layout/: sidebar.tsx
web_sota/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  generate.tsx  help.tsx  listen.tsx  local-llm.tsx  logger.tsx  quick.tsx  settings.tsx  status.tsx  tools.tsx
