[project]
name = "songgeneration_mcp"
version = "0.1.0"
description = "SongGeneration v2 (LeVo 2 / SG2) MCP server: local open-weight music LM via SongGeneration-Studio; dual-track output and SG2 tags."
authors = [{name = "MCP Studio"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=3.2,<4",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "ruff>=0.15.2",
    "imageio-ffmpeg>=0.6.0",
    "prefab-ui>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/sandraschi/songgeneration-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
